grammar.js
		source_file: $ => seq(
			optional($.shebang_line),
			optional($.NLS),
			optional(seq(repeat1($.file_annotation))),
			optional($.package_header),
			repeat($.import_header),
			repeat(seq($._statement, $._semis)),
			optional($._statement)
		),

		class_declaration: $ => prec.right(choice(
			seq(
				optional($.modifiers),
				choice($.CLASS, "interface"),
				alias($.simple_identifier, $.type_identifier),
				optional($.type_parameters),
				optional($.primary_constructor),
				optional(seq($.COLON, $._delegation_specifiers)),
				optional($.type_constraints),
				optional($.class_body)
			),
			seq(
				optional($.modifiers),
				$.ENUM,
				$.CLASS,
				alias($.simple_identifier, $.type_identifier),
				optional($.type_parameters),
				optional($.primary_constructor),
				optional(seq(":", $._delegation_specifiers)),
				optional($.type_constraints),
				optional($.enum_class_body)
			)
		)),

		primary_constructor: $ => seq(
			optional(seq(optional($.modifiers), "constructor")),
			$._class_parameters
		),

		class_body: $ => seq(
			"{",
			optional($.NLS),
			optional($._class_member_declarations),
			"}"
		),

		_class_parameters: $ => seq(
			"(",
			optional($.NLS),
			optional(sep1(
				seq($.class_parameter, optional($.NLS)),
				seq(",", optional($.NLS))
			)),
			")"
		),

		class_parameter: $ => seq(
			optional($.modifiers),
			optional(choice("val", "var")),
			$.simple_identifier,
			":",
			$._type,
			optional(seq("=", $._expression))
		),

		_delegation_specifiers: $ => prec.left(sep1(
			$.delegation_specifier,
			// $._annotated_delegation_specifier, // TODO: Annotations cause ambiguities with type modifiers
			","
		)),

		delegation_specifier: $ => prec.left(choice(
			$.constructor_invocation,
			$.explicit_delegation,
			prec(2, $.userType),
			$.function_type
		)),

		type_parameters: $ => seq($.LANGLE, sep1($.type_parameter, ","), $.RANGLE),

		type_parameter: $ => seq(
			optional($.type_parameter_modifiers),
			alias($.simple_identifier, $.type_identifier),
			optional(seq(":", $._type))
		),

		_class_member_declarations: $ => repeat1(seq($._class_member_declaration, $._semis)),

		_function_value_parameters: $ => seq("(", optional(sep1($._function_value_parameter, ",")), ")"),

		function_declaration: $ => seq(
			optional($.modifiers),
			"fun",
			optional(seq(
				optional($.NLS),
				$.type_parameters
			)),
			optional(seq(
				optional($.NLS),
				$.receiverTypeWithDot,
			)),
			$.simple_identifier,
			optional($.NLS),
			$._function_value_parameters,
			optional(seq(
				//optional($.NLS),
				$.COLON,
				optional($.NLS),
				$._type,
			)),
			optional(seq(
				//optional($.NLS),
				$.type_constraints,
			)),
			optional(seq(
				//optional($.NLS),
				$.function_body,
			)),
		),

		function_body: $ => choice(
			$._block,
			seq(
				"=",
				optional($.NLS),
				$._expression
			)
		),

		variable_declaration: $ => seq(
			// repeat($.annotation), TODO
			$.simple_identifier,
			optional(seq(":", $._type))
		),

		property_declaration: $ => seq(
			optional($.modifiers),
			choice("val", "var"),
			optional(seq(
				optional($.NLS),
				$.type_parameters
			)),
			optional(seq(
				optional($.NLS),
				$.receiverTypeWithDot,
			)),
			$.variable_declaration, // TODO: Multi-variable-declaration
			optional($.type_constraints),
			optional(choice(
				seq("=", $._expression),
				$.property_delegate
			)),
			choice(
				seq(
					optional(seq(
						//$.NLS,
						$.semi,
					)),
					optional($.getter),
					optional(seq(
						//optional($.NLS),
						optional($.semi),
						$.setter,
					)),
				),
				seq(
					optional(seq(
						//$.NLS,
						$.semi,
					)),
					optional($.setter),
					optional(seq(
						//optional($.NLS),
						optional($.semi),
						$.getter,
					)),
				),
			)
		),

		getter: $ => seq(
			optional($.modifiers),
			"get",
			optional(seq(
				//optional($.NLS),
				"(",
				optional($.NLS),
				")",
				optional(seq(
					optional($.NLS),
					":",
					optional($.NLS),
					$.type
				)),
				optional($.NLS),
				$.function_body
			))
		),

		object_declaration: $ => prec.right(seq(
			optional($.modifiers),
			"object",
			alias($.simple_identifier, $.type_identifier),
			optional(seq(":", $._delegation_specifiers)),
			optional($.class_body)
		)),

		secondary_constructor: $ => seq(
			optional($.modifiers),
			"constructor",
			$._function_value_parameters,
			optional(seq(":", $.constructor_delegation_call)),
			optional($._block)
		),

		constructor_delegation_call: $ => seq(choice("this", "super"), $.value_arguments),

		// ==========
		// Enum classes
		// ==========

		enum_class_body: $ => seq(
			"{",
			optional($.NLS),
			optional($._enum_entries),
			optional(seq(
				";",
				optional($.NLS),
				optional($._class_member_declarations),
			)),
			"}"
		),

		_enum_entries: $ => seq(sep1(seq($.enum_entry, optional($.NLS)), seq(",", optional($.NLS))), optional(","), optional($.NLS)),

		enum_entry: $ => seq(
			optional($.modifiers),
			$.simple_identifier,
			optional($.value_arguments),
			optional($.class_body)
		),

		// ==========
		// Statements
		// ==========

		_statement: $ => choice(
			$._declaration,
			seq(
				repeat(choice($.label, $.annotation)),
				choice(
					$.assignment,
					$._loop_statement,
					$._expression
				)
			)
		),

		_block: $ => seq(
			"{",
			optional(choice(
				seq(optional($.NLS), $.statements),
				$.semis
			)),
			"}",
		),

		_function_literal: $ => choice(
			$.lambda_literal,
			$.anonymous_function
		),

		modifiers: $ => prec.right(repeat1(choice($.annotation, $._modifier))),

		_modifier: $ => choice(
			$.class_modifier,
			$.member_modifier,
			$.visibility_modifier,
			$.function_modifier,
			$.property_modifier,
			$.inheritance_modifier,
			$.parameter_modifier,
			$.platform_modifier
		),

		class_modifier: $ => choice(
			$.SEALED,
			$.ANNOTATION,
			$.DATA,
			$.INNER
		),

		member_modifier: $ => choice(
			$.OVERRIDE,
			$.LATEINIT
		),

		visibility_modifier: $ => choice(
			$.PUBLIC,
			$.PRIVATE,
			$.INTERNAL,
			$.PROTECTED
		),

		function_modifier: $ => choice(
			$.TAILREC,
			$.OPERATOR,
			$.INFIX,
			$.INLINE,
			$.SUSPEND,
			$.SUSPEND
		),

		inheritance_modifier: $ => choice(
			$.ABSTRACT,
			$.FINAL,
			$.OPEN
		),

		_expression: $ => $.expression,
		constructor_invocation: $ => $.constructorInvocation,
		value_arguments: $ => $.valueArguments,
		simple_identifier: $ => $.simpleIdentifier,
		_type: $ => $.type,
		_semis: $ => $.semis,
		semis: $ => choice(
			seq(
				repeat($.NLS),
				repeat1(seq(";", repeat($.NLS))),
			),
			repeat1($.NLS)
		),
		//_semis: $ => seq(optional($.NLS), repeat(seq(";", optional($.NLS)))),
		//parameter: $ => "parameter",





		//=================converted from antlr (expressions with some restrictions)==========================





		constructorInvocation: $ => prec(1, seq(
			$.userType,
			$.valueArguments
		)),

		type: $ => seq(
			optional($.typeModifiers),
			choice(
				$.parenthesizedType,
				$.nullableType,
				$.typeReference,
				$.functionType
			)
		),

		typeReference: $ => choice(
			$.userType,
			$.DYNAMIC
		),

		quest: $ => $.NLSQUEST,

		userType: $ => seq(
			optional(seq(
				$.userType,
				alias($.NLSDOT, $.DOT),
				optional($.NLS)
			)),
			$.simpleUserType,
		),

		simpleUserType: $ => prec.right(seq(
			alias($.simpleIdentifier, $.type_identifier),
			optional(seq(
				//optional($.NLS),
				$.typeArguments
			))
		)),

		expression: $ => $._jumpExpression,

		disjunction: $ => seq(
			$.conjunction,
			repeat(seq(
				//optional($.NLS),
				$.DISJ,
				optional($.NLS),
				$.conjunction,
				optional($.NLS)
			))
		),

		conjunction: $ => seq(
			$.equality,
			repeat(seq(
				//optional($.NLS),
				$.CONJ,
				optional($.NLS),
				$.equality,
		        optional($.NLS)
			))
		),

		equality: $ => seq(
			$.comparison,
			repeat(seq(
				$.equalityOperator,
				optional($.NLS),
				$.comparison
			))
		),

		comparison: $ => seq(
			$.infixOperation,
			optional(seq(
				$.comparisonOperator,
				optional($.NLS),
				$.infixOperation
			))
		),

		infixOperation: $ => seq(
			$.elvisExpression,
			repeat(choice(
				seq(
					$.inOperator,
					optional($.NLS),
					$.elvisExpression
				),
				seq(
					$.isOperator,
					optional($.NLS),
					$.type
				)
			))
		),

		elvisExpression: $ => seq(
			$.infixFunctionCall,
			repeat(seq(
				//optional($.NLS),
				$.elvis,
				optional($.NLS),
				$.infixFunctionCall,
		        optional($.NLS)
			))
		),

		infixFunctionCall: $ => prec.right(seq(
			$.rangeExpression,
			repeat(seq(
				$.simpleIdentifier,
				optional($.NLS),
				$.rangeExpression
			))
		)),

		rangeExpression: $ => seq(
			$.additiveExpression,
			repeat(seq(
				$.RANGE,
				optional($.NLS),
				$.additiveExpression
			))
		),

		additiveExpression: $ => seq(
			$.multiplicativeExpression,
			repeat(seq(
				$.additiveOperator,
				optional($.NLS),
				$.multiplicativeExpression
			))
		),

		multiplicativeExpression: $ => seq(
			$.asExpression,
			repeat(seq(
				$.multiplicativeOperator,
				optional($.NLS),
				$.asExpression
			))
		),

		asExpression: $ => seq(
			$.prefixUnaryExpression,
			optional(seq(
				//optional($.NLS),
				$.asOperator,
				optional($.NLS),
				$.type
			))
		),

		prefixUnaryExpression: $ => seq(
			repeat($.unaryPrefix),
			$.postfixUnaryExpression
		),

		unaryPrefix: $ => prec.right(1, choice(
			$.annotation,
			$.label,
			seq(
				$.prefixUnaryOperator,
				optional($.NLS)
			)
		)),

		postfixUnaryExpression: $ => seq(
			$.primaryExpression,
			repeat(seq(
				$.postfixUnarySuffix,
			))
		),

		postfixUnarySuffix: $ => choice(
			$.postfixUnaryOperator,
			//$.typeArguments,
			$.callSuffix,
			$.indexingSuffix,
			$.navigationSuffix,
		),

		navigationSuffix: $ => seq(
			//optional($.NLS),
			$.memberAccessOperator,
			optional($.NLS),
			choice(
				$.simpleIdentifier,
				$.parenthesizedExpression,
				$.CLASS
			)
		),

		callSuffix: $ => prec.right(choice(
			seq(
				optional($.typeArguments),
				optional($.valueArguments),
				$.annotated_lambda,
			),
			seq(
				optional($.typeArguments),
				$.valueArguments
			)
		)),

		valueArguments: $ => choice(
			seq(
				$.LPAREN,
				optional($.NLS),
				$.RPAREN
			),
			seq(
				$.LPAREN,
				optional($.NLS),
				$.valueArgument,
				repeat(seq(
					optional($.NLS),
					$.COMMA,
					optional($.NLS),
					$.valueArgument
				)),
				optional($.NLS),
				$.RPAREN
			)
		),

		valueArgument: $ => seq(
			optional(seq($.annotation, optional($.NLS))),
			optional(seq(
				$.simpleIdentifier,
				//optional($.NLS),
				$.ASSIGNMENT,
				optional($.NLS)
			)),
			optional(seq($.MULT, optional($.NLS))),
			$.expression
		),

		primaryExpression: $ => choice(
			$.parenthesizedExpression,
			$.simpleIdentifier,
			$.literalConstant,
			$.stringLiteral,
			$.callableReference,
			//$._function_literal,
			//$.object_literal,
			$.collectionLiteral,
			$.thisExpression,
			$.superExpression,
			//$.if_expression,
			//$.when_expression,
			//$.try_expression,
			// jumpExpression was move to the top, see expression rule
		),

		literalConstant: $ => choice(
			$.BooleanLiteral,
			$.IntegerLiteral,
			$.HexLiteral,
			$.BinLiteral,
			$.CharacterLiteral,
			$.RealLiteral,
			$.NullLiteral,
			$.LongLiteral,
			$.UnsignedLiteral
		),

		stringLiteral: $ => choice(
			$.lineStringLiteral,
			$.multiLineStringLiteral
		),

		_jumpExpression: $ => prec.right(choice(
			$.disjunction,
			seq(
				$.THROW,
				optional($.NLS),
				$._jumpExpression,
			),
			seq(
				choice(
					$.RETURN,
					$.RETURN_AT,
				),
				optional($._jumpExpression),
			),
			$.CONTINUE,
			$.CONTINUE_AT,
			$.BREAK,
			$.BREAK_AT,
		)),

		additiveOperator: $ => choice(
			$.ADD,
			$.SUB
		),

		prefixUnaryOperator: $ => choice(
			$.INCR,
			$.DECR,
			$.SUB,
			$.ADD,
			$.excl
		),

		memberAccessOperator: $ => choice(
			$.DOT,
			$.safeNav,
			$.COLONCOLON
		),

		simpleIdentifier: $ => prec(PREC.SIMPLE_IDENTIDIER, choice(
			$.Identifier,
			$.ABSTRACT,
			$.ANNOTATION,
			$.BY,
			$.CATCH,
			$.COMPANION,
			$.CONSTRUCTOR,
			$.CROSSINLINE,
			$.DATA,
			$.DYNAMIC,
			$.ENUM,
			$.EXTERNAL,
			$.FINAL,
			$.FINALLY,
			$.GET,
			$.IMPORT,
			$.INFIX,
			$.INIT,
			$.INLINE,
			$.INNER,
			$.INTERNAL,
			$.LATEINIT,
			$.NOINLINE,
			$.OPEN,
			$.OPERATOR,
			$.OUT,
			$.OVERRIDE,
			$.PRIVATE,
			$.PROTECTED,
			$.PUBLIC,
			$.REIFIED,
			$.SEALED,
			$.TAILREC,
			$.SET,
			$.VARARG,
			$.WHERE,
			$.FIELD,
			$.PROPERTY,
			$.RECEIVER,
			$.PARAM,
			$.SETPARAM,
			$.DELEGATE,
			$.FILE,
			$.EXPECT,
			$.ACTUAL,
			$.CONST,
			$.SUSPEND
		)),
